# Moving_landing

./: .gitignore  README.md
launch/: traj_follow.launch
sh_utils/: attitude_pid.txt  imu_acc_check.sh  odom_remap.cpp  odom_remap11.cpp  pub_ctrl_triger.sh  pub_land_triger.sh  pub_triger.sh  realflight_landing.sh  realflight_record.sh  realflight_traj_follow.sh  record.sh  record_als.sh  record_sim.sh  sim_traj_follow.sh  test.sh  test_traj_follow.sh
src/gcopter_ML/gcopter/: CMakeLists.txt  package.xml
src/gcopter_ML/gcopter/config/: global_planning.yaml
src/gcopter_ML/gcopter/include/gcopter/: gcopter.hpp
src/gcopter_ML/gcopter/launch/: global_planning.launch
src/gcopter_ML/gcopter/src/: global_planning copy.cpp  global_planning.cpp
src/gcopter_ml/gcopter/: CMakeLists.txt  global_planning.xml  package.xml
src/gcopter_ml/gcopter/config/: global_planning.rviz  global_planning.yaml
src/gcopter_ml/gcopter/include/gcopter/: gcopter.hpp  minco.hpp
src/gcopter_ml/gcopter/include/misc/: visualizer.hpp
src/gcopter_ml/gcopter/launch/: global_planning.launch  traj_follow_planning.launch
src/gcopter_ml/gcopter/src/: global_planning.cpp
src/gcopter_ml/map_gen/mockamap/config/: mockamap.yaml
src/moving_platform/: CMakeLists.txt  package.xml
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: rviz_sim.rviz
src/planning/launch/: perching.launch  perching_realflight.launch  perching_simulation.launch
src/planning/src/: planning_nodelet.cpp
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl.launch
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
src/px4ctrl_h/: mainpage.dox  manifest.xml
src/px4ctrl_h/include/: traj_follow.hpp
src/px4ctrl_h/launch/: run_ctrl.launch
src/px4ctrl_h/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  input.cpp  px4ctrl_node.cpp
src/realflight_utils/: package.xml
src/realflight_utils/src/: rcin_remap.cpp
src/sh_utils/: realflight_swarm_2.sh
src/traj_opt/: CMakeLists.txt
src/traj_opt/include/traj_opt/: lbfgs_raw.hpp  poly_traj_utils.hpp  poly_traj_utils_jerk.hpp  traj_opt.h  traj_opt.h_ml
src/traj_opt/src/: traj_opt_perching.cc  traj_opt_perching.cc_bu  traj_opt_perching.cc_ml
src/utils/car_odom_server/: CMakeLists.txt  package.xml
src/utils/car_odom_server/include/car_odom_server/: SerialPort.cpp  SerialPort.h
src/utils/car_odom_server/msg/: car_status.msg
src/utils/chcnav/: CMakeLists.txt  package.xml
src/utils/chcnav/doc/: README.md
src/utils/chcnav/launch/: demo_1.launch  demo_2.launch  demo_3.launch  demo_4.launch  demo_5.launch  demo_6.launch  demo_7.launch  demo_8.launch  demo_9.launch
src/utils/chcnav/msg/: hc_sentence.msg  hcinspvatzcb.msg  hcrawimub.msg  int8_array.msg  string.msg
src/utils/chcnav/scripts/: uniformity_process.py
src/utils/chcnav/src/demo/: chcnav_fix_demo.cpp  record_msg_to_file.cpp  time_uniformity_node.cpp
src/utils/chcnav/src/hc_cgi_protocol_process_node/: hc_cgi_protocol.c  hc_cgi_protocol.h  hc_cgi_protocol_process_node.cpp
src/utils/chcnav/src/hc_msg_parser_node/: hc_msg_parser.hpp  hc_msg_parser_launch_node.cpp
src/utils/chcnav/src/hc_msg_parser_node/device_connector/: device_connector.hpp
src/utils/chcnav/src/hc_msg_parser_node/device_connector/file_common/: file_common.hpp
src/utils/chcnav/src/hc_msg_parser_node/device_connector/serial_common/: serial_common.hpp
src/utils/chcnav/src/hc_msg_parser_node/device_connector/tcp_common/: tcp_common.hpp
src/utils/chcnav/src/hc_msg_parser_node/device_connector/udp_common/: udp_common.hpp
src/utils/chcnav/src/hc_msg_parser_node/hc_msg_parser/: hc_msg_parser.c  hc_msg_parser.h
src/utils/chcnav/src/ntrip_server_node/: ntrip_server_launch_node.cpp  swas_server.cpp  swas_server.hpp
src/utils/chcnav/src/ntrip_server_node/swas_sdk/: swas_debug.h  swas_sdk.h  swas_socket.h  swas_types.h
src/utils/ekf_test/: CMakeLists.txt  package.xml
src/utils/ekf_test/include/ekf_test/: ekf.hpp
src/utils/ekf_test/launch/: ekf_test.launch
src/utils/ekf_test/src/: ekf_test.cpp
src/utils/ekf_test/tmp/: ekf_test.cpp
src/utils/ground_platform/: CMakeLists.txt  package.xml
src/utils/ground_platform/include/: elecmag.h
src/utils/quadrotor_msgs/: CMakeLists.txt
src/utils/quadrotor_msgs/msg/: MotorlockTriger.msg  Px4ctrlDebug.msg  RcinRemap.msg  TrajctrlTrigger.msg  TrajcurDesire.msg
src/utils/realflight_utils/: CMakeLists.txt  odomremap_plugins.xml  package.xml  rcinremap_plugins.xml  trajals_plugins.xml
src/utils/realflight_utils/config/: traj_analyse.yaml  traj_follow.rviz
src/utils/realflight_utils/include/: ekf.hpp  polyfit.hpp
src/utils/realflight_utils/launch/: imu_analyse.launch  odom_remap.launch  odom_remap_sim.launch  rc_remap.launch  rc_remap_sim.launch  traj_analyse.launch
src/utils/realflight_utils/src/: odom_remap.cpp  odom_remap_111.cpp  odom_remap_w.cpp  rcin_remap.cpp  traj_analyse.cpp
src/utils/simulation_utils/: CMakeLists.txt  package.xml
src/utils/simulation_utils/launch/: control.launch  smartcar_display.launch  spawn_car.launch
src/utils/simulation_utils/scripts/: cmdvel2gazebo.py  cmdvel2gazebo_keyboard.py  cmdvel2rviz_keyboard.py  vehicle_pose_and_velocity_updater.py
src/utils/simulation_utils/src/: cmd2rviz_keyboard.cpp
src/utils/simulation_utils/urdf/: smart.xacro
src/utils/target_prediction/: CMakeLists.txt
src/utils/target_prediction/include/target_prediction/: bezier_predict.h
src/utils/target_prediction/src/: bezier_predict.cpp
src/utils/target_predition/: CMakeLists.txt  package.xml
src/utils/target_predition/include/: target_prediction.h
src/utils/target_predition/src/: target_prediction.cc
src/utils/uav_utils/include/uav_utils/: converters.h
src/utils/uav_utils/launch/: base_sim_single_vehicle_ground_truth.launch
src/utils/vrpn_client_ros-foxy-devel/launch/: sample.launch
