<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.0.0</version>
  <description>The planning package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>traj_opt</depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <build_depend>target_prediction</build_depend>
  <build_export_depend>target_prediction</build_export_depend>
  <exec_depend>target_prediction</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>

</package>