<package format="2">
  <name>gcopter_ml</name>
  <author email="wangzhepei@live.com">Zhepei Wang</author>
  <maintainer email="wangzhepei@live.com">Zhepei Wang</maintainer>
  <version>0.1.0</version>
  <description>
      the gcopter package for ML
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/global_planning.xml"/>
  </export>
  
</package>
