<?xml version="1.0"?>
<package format="2">
  <name>realflight_utils</name>
  <version>1.0.0</version>
  <description>The plugins packages of realflight </description>

  <maintainer email="hrm@todo.todo">hrm</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>car_odom_server</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <build_export_depend>car_odom_server</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>car_odom_server</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/rcinremap_plugins.xml"/>
      <nodelet plugin="${prefix}/trajals_plugins.xml"/>
      <nodelet plugin="${prefix}/odomremap_plugins.xml"/>

  </export>
</package>
